# ElectriScooterRentalApp

./: App.cpp  CMakeLists.txt  data.csv  data.txt  scooters.txt
AppController/: Controller.cpp  Controller.h  ControllerTest.cpp  ControllerTest.h
AppRepository/: CrudRepository.cpp  CrudRepository.h  Crudrepository.h  CsvFileRepository.cpp  CsvFileRepository.h  InMemoryRepository.cpp  InMemoryRepository.h  Repository.cpp  Repository.h  RepositoryTest.cpp  RepositoryTest.h
AppUI/: ClientUI.cpp  ClientUI.h  MainUI.cpp  MainUI.h  ManagerUI.cpp  ManagerUI.h
Domain/: Scooter.cpp  Scooter.h
Utils/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.h
